--- a/src/_components/head.liquid
+++ b/src/_components/head.liquid
@@ -5,6 +5,6 @@
 
 <meta name="description" content="{{ metadata.description }}" />
 
-<link rel="stylesheet" href="{% asset_path css %}" />
-<script src="{% asset_path js %}" defer></script>
+<link rel="stylesheet" href="{% asset_path css %}" data-turbo-track="reload"/>
+<script src="{% asset_path js %}" defer data-turbo-track="reload"></script>
 {% live_reload_dev_js %}
