--- a/frontend/styles/index.css
+++ b/frontend/styles/index.css
@@ -7,42 +7,6 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
-  @apply mx-2 my-0 font-sans leading-normal;
-}
-
-a {
-  @apply text-indigo-600 underline;
-}
-
-h1 {
-  @apply mx-0 mt-4 mb-12 text-4xl text-center;
-}
-
-body > header {
-  @apply m-4 text-center;
-}
-
-body > header img {
-  @apply inline-block w-96 max-w-full;
-}
-
-body > nav ul {
-  @apply flex gap-6 justify-center p-0 mx-0 my-8 text-xl font-bold list-none;
-}
-
-body > nav a {
-  @apply text-black no-underline;
-}
-
-main {
-  @apply px-4 pt-4 pb-12 mx-auto mt-8 mb-16 max-w-6xl bg-white rounded-xl border-2 drop-shadow-xl lg:px-6 lg:pt-6;
-}
-
-footer {
-  @apply mb-16 text-base text-center;
-}
-
-hr {
-  @apply mx-0 my-12 border-t-2 border-dotted border-neutral-400;
+@layer base {
+  a { @apply text-indigo-600 underline dark:text-indigo-300; }
 }
