--- a/src/_layouts/page.liquid
+++ b/src/_layouts/page.liquid
@@ -2,6 +2,6 @@
 layout: default
 ---
 
-<h1>{{ page.title }}</h1>
+<h1 class="mx-0 mt-4 mb-12 text-4xl text-center">{{ page.title }}</h1>
 
 {{ content }}
