--- a/src/_components/footer.liquid
+++ b/src/_components/footer.liquid
@@ -1,3 +1,3 @@
 <footer class="mb-16 text-base text-center">
-  Contact me at <a href="mailto:{{ metadata.email }}">{{ metadata.email }}</a>
+  <a href="mailto:{{ metadata.email }}">{{ metadata.email }}</a>
 </footer>
