--- a/frontend/styles/index.css
+++ b/frontend/styles/index.css
@@ -1,8 +1,8 @@
 /* If you need to add @import statements, do so up here */
 
 @import "jit-refresh.css"; /* triggers frontend rebuilds */
+@import "fontawesome-free/css/all.min.css";
 
-/* Set up Tailwind imports */
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
