A little nicer portfolio

--- a/src/_components/footer.liquid
+++ b/src/_components/footer.liquid
@@ -14,8 +14,7 @@
     </li>
     <li>
       <a class="text-black no-underline dark:text-slate-100" href="mailto:{{ metadata.email }}">
-        <i class="fa fa-square-envelope"></i>
-        {{ metadata.email }}
+        <i class="fa fa-square-envelope"></i>&nbsp;{{ metadata.email }}
       </a>
     </li>
   </ul>
