--- a/src/_components/navbar.liquid
+++ b/src/_components/navbar.liquid
@@ -1,43 +1,19 @@
 <div class="flex gap-6 justify-center items-end p-0 mx-0 my-8 text-xl font-bold">
-<header class="m-4 text-center">
-  <a class="no-underline" href="{{ '/' | relative_url }}">
-    <picture class="inline-block w-96 max-w-full" alt="{{ metadata.title | escape }}">
-      <source srcset="{{ '/images/logo-dark.svg' | relative_url }}" media="(prefers-color-scheme: dark)" >
-      <img src="{{ '/images/logo.svg' | relative_url }}">
-    </picture>
-  </a>
-</header>
-<nav>
-  <ul class="flex gap-6 my-8 list-none">
-    <li>
-      <a class="text-black no-underline dark:text-slate-100" href="{{ '/portfolio' | relative_url }}">
-        Portfolio
-      </a>
-    </li>
-    <!--
-    <li>
-      <a class="text-black no-underline dark:text-slate-100" href="{{ '/posts' | relative_url }}">
-        Posts
-      </a>
-    </li>
-    -->
-    <li>
-      <a class="text-black no-underline dark:text-slate-100" href="{{ '/about' | relative_url }}">
-        About
-      </a>
-    </li>
-    <li>
-      <a class="text-black no-underline dark:text-slate-100" href="https://www.flickr.com/photos/143431890@N07/">
-        <i class="fa-brands fa-flickr"></i>
-        Flickr
-      </a>
-    </li>
-    <li>
-      <a class="text-black no-underline dark:text-slate-100" href="https://www.facebook.com/agne.vaitkeviciute.1">
-        <i class="fa-brands fa-facebook-square"></i>
-        Facebook
-      </a>
-    </li>
-  </ul>
-</nav>
+  <header class="m-4 text-center"><!-- TODO Reduce to icon for small screens -->
+    <a class="no-underline" href="{{ '/' | relative_url }}">
+      <picture class="inline-block w-96 max-w-full" alt="{{ metadata.title | escape }}">
+        <source srcset="{{ '/images/logo-dark.svg' | relative_url }}" media="(prefers-color-scheme: dark)" >
+        <img src="{{ '/images/logo.svg' | relative_url }}">
+      </picture>
+    </a>
+  </header>
+  <nav><!-- TODO Reduce/stack/colapse for small screens -->
+    <ul class="flex gap-6 my-8 list-none">
+      <li><a class="text-black no-underline dark:text-slate-100" href="{{ '/portfolio' | relative_url }}"> ortfolio /a></li>
+ <!-- <li><a class="text-black no-underline dark:text-slate-100" href="{{ '/posts' | relative_url }}">Posts</a></li> -->
+      <li><a class="text-black no-underline dark:text-slate-100" href="{{ '/about' | relative_url }}">About</a></li>
+      <li><a class="text-black no-underline dark:text-slate-100" href="https://www.flickr.com/photos/143431890@N07/"><i class="fa-brands fa-flickr"></i>&nbsp;Flickr</a></li>
+      <li><a class="text-black no-underline dark:text-slate-100" href="https://www.facebook.com/agne.vaitkeviciute.1"><i class="fa-brands fa-facebook-square"></i>&nbsp;Facebook</a></li>
+    </ul>
+  </nav>
 </div>
