--- a/src/_layouts/default.liquid
+++ b/src/_layouts/default.liquid
@@ -6,7 +6,7 @@
   <body class="text-slate-900 dark:text-slate-100 bg-white dark:bg-black mx-2 my-0 font-sans leading-normal {{ resource.data.layout }} {{ resource.data.page_class }}">
     {% render "navbar", metadata: site.metadata, resource: resource %}
 
-    <main class="px-4 pt-4 pb-12 mx-auto mt-8 mb-16 max-w-7xl rounded-xl shadow-lg bg-slate-100 dark:shadow-white/20 dark:bg-slate-900 lg:px-6 lg:pt-6">
+    <main class="px-4 pt-4 pb-12 mx-auto mt-8 mb-16 max-w-screen-2xl rounded-xl shadow-lg bg-slate-100 dark:shadow-white/20 dark:bg-slate-900 lg:px-6 lg:pt-6">
       {{ content }}
     </main>
 
