Nicer prev next

--- a/src/_components/footer.liquid
+++ b/src/_components/footer.liquid
@@ -1,4 +1,4 @@
-<footer>
+<footer class="m-4">
   <ul class="flex gap-6 justify-center list-none">
     <li>
       <a class="text-black no-underline dark:text-slate-100" href="https://www.flickr.com/photos/143431890@N07/">
