--- a/src/_components/head.liquid
+++ b/src/_components/head.liquid
@@ -3,6 +3,7 @@
 {% capture resource_title %}{{ title | strip_html | strip_newlines }}{% endcapture %}
 <title>{% if resource_title != "Index" %}{{ resource_title | escape }} | {{ metadata.title | escape }}{% else %}{{ metadata.title | escape }}: {{ metadata.tagline | escape }}{% endif %}</title>
 <meta name="description" content="{{ metadata.description }}" />
+<meta name="turbo-cache-control" content="no-preview" />
 <link rel="shortcut icon" type="image/svg" href="images/favicon.svg"/>
 <link rel="stylesheet" href="{% asset_path css %}" data-turbo-track="reload"/>
 <script src="{% asset_path js %}" defer data-turbo-track="reload"></script>
