--- a/src/_components/portfolio_photo.liquid
+++ b/src/_components/portfolio_photo.liquid
@@ -1,28 +1,20 @@
-<div class="relative">
-<div class="absolute left-3 top-8 h-full">
-<a class="text-black no-underline dark:text-slate-100" href="../portfolio/{{ prev }}">
-<i class="fa-solid fa-chevron-left"></i>
-</a>
-</div>
-</div>
-
-<div class="relative">
-<div class="absolute right-3 top-8 h-full">
-<a class="text-black no-underline dark:text-slate-100" href="../portfolio/{{ next }}">
-<i class="fa-solid fa-chevron-right"></i>
-</a>
-</div>
-</div>
-
-<div class="relative">
-<div class="absolute top-1 right-3">
-<a class="text-black no-underline dark:text-slate-100" href="../portfolio#{{ id }}">
-<i class="fa fa-xmark"></i>
-</a>
-</div>
+<div class="relative text-lg lg:text-2xl">
+  <a href="../portfolio/{{ prev }}">
+    <div class="absolute top-0 left-0 h-full">
+      <i class="p-6 text-gray-500 rounded-tl-lg rounded-br-lg mix-blend-luminosity hover:bg-white/30 dark:hover:bg-black/30 fa-solid fa-chevron-left"></i>
+    </div>
+  </a>
+  <a href="../portfolio/{{ next }}">
+    <div class="absolute top-0 right-0 h-full">
+      <i class="p-6 text-gray-500 rounded-tr-lg rounded-bl-lg mix-blend-luminosity hover:bg-white/30 dark:hover:bg-black/30 fa-solid fa-chevron-right"></i>
+    </div>
+  </a>
+  <a href="../#{{ id }}">
+    <div class="absolute right-0 -top-16">
+      <i class="p-6 rounded-tr-lg rounded-bl-lg text-slate-900 dark:text-slate-100 hover:text-slate-500 fa fa-xmark"></i>
+    </div>
+  </a>
 </div>
 
-<a class="text-black no-underline dark:text-slate-100" href="../portfolio#{{ id }}">
-  <img alt="{{ title }}" id="{{ id }}" class="w-full h-full rounded-lg"
-       src="https://mdbcdn.b-cdn.net/img/Photos/Horizontal/Nature/4-col/img%20({{ id }}).webp">
-</a>
+<img alt="{{ title }}" class="w-full h-full rounded-lg"
+     src="https://mdbcdn.b-cdn.net/img/Photos/Horizontal/Nature/4-col/img%20({{ id }}).webp">
