--- a/src/_layouts/default.html.liquid
+++ b/src/_layouts/default.html.liquid
@@ -6,7 +6,7 @@
   <body class="text-slate-900 dark:text-slate-100  bg-slate-100 tabular-nums dark:bg-slate-900  mx-2 my-0 font-sans leading-normal {{ resource.data.layout }} {{ resource.data.page_class }}">
     {% render "navbar", metadata: site.metadata, resource: resource %}
 
-    <main class="px-4 pt-4 pb-4 mx-auto mt-4 mb-4 max-w-screen-2xl bg-white rounded-xl shadow-lg dark:bg-black dark:shadow-white/20">
+    <main class="p-4 m-4 mx-auto mb-4 max-w-screen-2xl bg-white rounded-xl shadow-lg dark:bg-black dark:shadow-white/20">
       {{ content }}
     </main>
 
