--- a/src/_layouts/page.md.liquid
+++ b/src/_layouts/page.md.liquid
@@ -2,6 +2,6 @@
 layout: default
 ---
 
-<h1 class="mx-0 mt-2 mb-2 text-4xl text-center">{{ page.title }}</h1>
+<h1 class="mx-0 mb-4 text-4xl text-center">{{ page.title }}</h1>
 
 {{ content }}
