Add Flickr photos

--- a/src/_components/portfolio_cell.liquid
+++ b/src/_components/portfolio_cell.liquid
@@ -1,6 +1,5 @@
-<div class="p-2 transition-all hover:p-0">
+<div class="p-2 transition-all">
   <a href="portfolio/{{ id }}">
-    <img alt="{{ title }}" id="{{ id }}" class="block object-cover object-center w-full h-full rounded-lg"
-         src="https://mdbcdn.b-cdn.net/img/Photos/Horizontal/Nature/4-col/img%20({{ id }}).webp">
+    <img src="{{ url }}" alt="{{ title }}" id="{{ id }}" class="block object-cover object-center w-full h-full rounded-lg">
   </a>
 </div>
