--- a/frontend/styles/index.css
+++ b/frontend/styles/index.css
@@ -8,5 +8,7 @@
 @tailwind utilities;
 
 @layer base {
-  a { @apply text-indigo-600 underline dark:text-indigo-300; }
+  a {
+    @apply text-indigo-600 underline dark:text-indigo-300;
+  }
 }
