--- a/src/_components/portfolio_cell.liquid
+++ b/src/_components/portfolio_cell.liquid
@@ -1,4 +1,4 @@
-<div class="p-2 transition-all">
+<div class="p-2 transition-all {{ class }}">
   <a href="portfolio/{{ id }}">
     <img src="{{ url }}" alt="{{ title }}" id="{{ id }}" class="block object-cover object-center w-full h-full rounded-lg">
   </a>
