Resolve "Navigation header links to Flickr-based portfolio pages"

--- a/src/_components/footer.liquid
+++ b/src/_components/footer.liquid
@@ -1,15 +1,15 @@
 <footer class="m-4">
   <ul class="flex gap-6 justify-center list-none">
     <li>
-      <a class="text-black no-underline dark:text-slate-100" href="https://www.flickr.com/photos/143431890@N07/">
+      <a class="text-black no-underline dark:text-slate-100" href="https://www.flickr.com/photos/{{ metadata.flickr_user_id }}/">
         <i class="fa-brands fa-flickr"></i>
-        Flickr
+        flickr
       </a>
     </li>
     <li>
-      <a class="text-black no-underline dark:text-slate-100" href="https://www.facebook.com/agne.vaitkeviciute.1">
+      <a class="text-black no-underline dark:text-slate-100" href="https://www.facebook.com/{{ metadata.facebook_user_id }}">
         <i class="fa-brands fa-facebook-square"></i>
-        Facebook
+        facebook
       </a>
     </li>
     <li>
