--- a/src/_components/navbar.liquid
+++ b/src/_components/navbar.liquid
@@ -8,11 +8,13 @@
     </a>
   </header>
   <nav>
-    <ul class="grid grid-cols-1 gap-0 list-none lg:mb-4 lg:grid-cols-2 2xl:grid-cols-4 lg:gap-6">
-      <li><a class="text-black no-underline dark:text-slate-100" href="{{ '/' | relative_url }}">Portfolio</a></li>
+    <ul class="grid grid-cols-1 gap-0 list-none lg:mb-4 lg:grid-cols-2 2xl:grid-cols-3 lg:gap-4">
       <li><a class="text-black no-underline dark:text-slate-100" href="{{ '/about' | relative_url }}">About</a></li>
-      <li><a class="text-black no-underline dark:text-slate-100" href="https://www.flickr.com/photos/143431890@N07/"><i class="fa-brands fa-flickr"></i> Flickr</a></li>
-      <li><a class="text-black no-underline dark:text-slate-100" href="https://www.facebook.com/agne.vaitkeviciute.1"><i class="fa-brands fa-facebook-square"></i> Facebook</a></li>
+      <li><a class="text-black no-underline dark:text-slate-100" href="https://www.flickr.com/photos/{{ metadata.flickr_user_id }}/"><i class="fa-brands fa-flickr"></i> flickr</a></li>
+      <li><a class="text-black no-underline dark:text-slate-100" href="https://www.facebook.com/{{ metadata.facebook_user_id }}"><i class="fa-brands fa-facebook-square"></i> facebook</a></li>
+      {% for portfolio in portfolios -%}
+      <li><a class="text-black no-underline dark:text-slate-100" href="{{ portfolio | relative_url }}">{{ portfolio | capitalize }}</a></li>
+      {% endfor -%}
     </ul>
   </nav>
 </div>
