Resolve "Index page with overview of Flickr-based photos or portfolios"

--- a/src/_components/flickr_photo.liquid
+++ b/src/_components/flickr_photo.liquid
@@ -19,7 +19,7 @@
     </div>
   </a>
 </div>
-<img src="{{ source }}" id="{{ id }}" alt="{{ title }}" class="w-full h-full rounded-lg">
+<img src="{{ source }}" id="{{ id }}" alt="{{ title }}" referrerpolicy="no-referrer" class="w-full h-full rounded-lg">
 
 <div class="mx-auto">
   <div class="flex place-content-center	gap-4">
