--- a/src/_components/flickr_portfolio_thumbnail.liquid
+++ b/src/_components/flickr_portfolio_thumbnail.liquid
@@ -1,5 +1,5 @@
 <div class="p-2 transition-all {{ class }}">
   <a href="{{ portfolio_url }}{{ id }}">
-    <img src="{{ source }}" alt="{{ title }}" id="{{ id }}" class="block object-cover object-center w-full h-full rounded-lg">
+    <img src="{{ source }}" alt="{{ title }}" id="{{ id }}" referrerpolicy="no-referrer" class="block object-cover object-center w-full h-full rounded-lg">
   </a>
 </div>
