--- a/src/_components/navbar.liquid
+++ b/src/_components/navbar.liquid
@@ -8,7 +8,7 @@
     </a>
   </header>
   <nav>
-    <ul class="grid grid-cols-1 gap-0 list-none lg:mb-4 lg:grid-cols-2 2xl:grid-cols-3 lg:gap-4">
+    <ul class="grid grid-cols-1 gap-0 list-none lg:mb-4 lg:grid-cols-3 lg:gap-4">
       <li><a class="text-black no-underline dark:text-slate-100" href="{{ '/about' | relative_url }}">About</a></li>
       <li><a class="text-black no-underline dark:text-slate-100" href="https://www.flickr.com/photos/{{ metadata.flickr_user_id }}/"><i class="fa-brands fa-flickr"></i> flickr</a></li>
       <li><a class="text-black no-underline dark:text-slate-100" href="https://www.facebook.com/{{ metadata.facebook_user_id }}"><i class="fa-brands fa-facebook-square"></i> facebook</a></li>
