--- a/src/_components/head.liquid
+++ b/src/_components/head.liquid
@@ -8,3 +8,4 @@
 <link rel="stylesheet" href="{% asset_path css %}" data-turbo-track="reload"/>
 <script src="{% asset_path js %}" defer data-turbo-track="reload"></script>
 {% live_reload_dev_js %}
+{% seo %}
