--- a/src/_layouts/flickr_photo.liquid
+++ b/src/_layouts/flickr_photo.liquid
@@ -24,6 +24,7 @@ layout: default
           title:         resource.data.title,
           description:   resource.data.description,
           portfolio:     resource.data.portfolio,
+          sizes:         resource.data.sizes,
           make:          make,
           model:         model,
           aperture:      aperture,
