--- a/src/_layouts/flickr_portfolio.liquid
+++ b/src/_layouts/flickr_portfolio.liquid
@@ -14,6 +14,7 @@ layout: default
                 portfolio_url: resource.relative_url,
                 id:            photo.data.slug,
                 title:         photo.data.title,
+                sizes:         photo.data.sizes,
                 class:         class -%}
     {% endfor -%}
   </div>
